# pendulum

./: CMakeLists.txt  README.md  package.xml
launch/: complete.launch
src/: Altitude.cpp  EnergieControlLateral.cpp  EnergieControlRotational.cpp  LQR_Lateral.cpp  LQR_Reduce_Swing.cpp  LQR_Rotational.cpp  Lateral_ACC.cpp  Motor_Commands.cpp  Pitch.cpp  Roll.cpp  Roll_ACC.cpp  Rotational_ACC.cpp  Transform.cpp  X_POS.cpp  Y_POS.cpp  Yaw.cpp
urdf/: hummingbird_pendulum_base .xacro  hummingbird_pendulum_base.xacro  pendulum.xacro
